# forecast-scaffold

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: bench.yml  bot-test.yml  bot.yml  ci.yml  list-forecasts.yml  manifold.yml
bench/: README.md  build_corpus_index.py  contamination_probe.py  direct_agent.py  evidence_ablation.py  fetch_btf2.py  fetch_set.py  freeze_prospective.py  overnight_ablation.py  report.py  run_bench.py  tail_audit.py  timevault.py  timevault_mcp.py
bench/analysis/: README.md  ab-research-v2-readout-2026-07-17.txt  cross_model_pools.py  deadline-census.jsonl  deadline_census.py  extremize_test.py  loop3_multiplicity.py  memory_screen.py  minibench-2026-07-tags.json  minibench_2026_07_15.py  minibench_counterfactuals.py  pastcast_validity.py  readout_ab_research_v2.py  readout_tranche1.py  sota_power.py  substrate-recall-proxy.jsonl  tail_analysis.py  (+3 more)
bot/: README.md  asknews.py  crowd.py  list_forecasts.py  metaculus.py  run_bot.py  run_manifold.py  score_manifold.py
config/: forecast.toml
docs/: HANDOVER.md  design.md  evaluation.md  journal.html  manifold-policy.md  minibench-analysis-2026-07-16.md  minibench-pastcast-analysis-2026-07-15.html  proposals-research-v2.md  review-2026-07-12.md  roadmap-v05.md  schema.md  tournament-analysis.html
evals/: scenarios.json
scripts/: backfill_journal.py  behavioral_evals.py  build_skill_bundles.sh  journal_leak_guard.py  vendor_sync.py
tests/: conftest.py  test_angles.py  test_asknews.py  test_bench_arms.py  test_bot_client.py  test_brief_timestamps.py  test_btf2.py  test_cdf.py  test_cli.py  test_config.py  test_core.py  test_corpus.py  test_deadline_census.py  test_direct_agent.py  test_export.py  test_freeze.py  test_graders.py  test_journal_leak_guard.py  test_manifold_bot.py  test_minibench_analysis.py  test_multirun.py  test_pastcast_validity.py  test_probe.py  test_providers.py  test_recalibration.py  test_report.py  test_research_telemetry.py  test_review_fixes.py  test_second_eyes_bench.py  test_source_floor.py  test_spine.py  test_substrate_recall.py  test_tail_audit.py  test_timevault.py  test_tranche_analysis.py  test_vendor_sync.py
(+25 files in other folders)
